src/parser/parser.cxx
#include "parser.hxx"
#include <stdexcept>

namespace kex {

Parser::Parser(std::vector<Token> tokens, std::string_view filename)
    : m_tokens(std::move(tokens)), m_filename(filename) {}

// ===== Token Navigation =====

auto Parser::peek() const -> const Token& {
    return m_tokens[m_pos];
}

auto Parser::peekNext() const -> const Token& {
    if (m_pos + 1 >= static_cast<int>(m_tokens.size())) {
        return m_tokens.back();
    }
    return m_tokens[m_pos + 1];
}

auto Parser::advance() -> const Token& {
    const auto& token = m_tokens[m_pos];
    if (!atEnd()) m_pos++;
    return token;
}

auto Parser::atEnd() const -> bool {
    return peek().type == TokenType::Eof;
}

auto Parser::check(TokenType type) const -> bool {
    return peek().type == type;
}

auto Parser::match(TokenType type) -> bool {
    if (check(type)) {
        advance();
        return true;
    }
    return false;
}

auto Parser::expect(TokenType type, const std::string& message) -> const Token& {
    if (check(type)) {
        return advance();
    }
    error(message + ", got " + std::string(tokenTypeName(peek().type))
          + (peek().value.empty() ? "" : " [" + peek().value + "]"));
}

auto Parser::skipNewlines() -> void {
    while (check(TokenType::Newline)) {
        advance();
    }
}

auto Parser::currentLocation() const -> SourceLocation {
    return peek().location;
}

auto Parser::error(const std::string& message) -> void {
    auto loc = currentLocation();
    throw std::runtime_error(
        std::string(loc.file) + ":" + std::to_string(loc.line) + ":"
        + std::to_string(loc.column) + ": " + message);
}

// ===== Program =====

auto Parser::parseProgram() -> ast::Program {
    ast::Program program;
    skipNewlines();

    while (!atEnd()) {
        program.items.push_back(parseTopLevelItem());
        skipNewlines();
    }

    return program;
}

auto Parser::parseTopLevelItem() -> ast::TopLevelItem {
    if (check(TokenType::Module) ||
        (check(TokenType::Foul) && peekNext().type == TokenType::Module)) {
        return parseModuleDef();
    }
    if (check(TokenType::Type)) return parseTypeDef();
    if (check(TokenType::Record)) return parseRecordDef();
    if (check(TokenType::Trait)) return parseTraitDef();
    if (check(TokenType::Make)) return parseMakeDef();
    if (check(TokenType::Compiled)) return parseCompiledBlock();
    if (check(TokenType::Using)) return parseUsingBlock();
    if (check(TokenType::Main)) return parseMainBlock();
    if (check(TokenType::HashLBracket)) return parsePragma();

    if (check(TokenType::Foul)) {
        advance(); // consume foul
        return parseFunctionDef(true);
    }
    if (check(TokenType::Let)) {
        if (isLetFunctionDefAhead()) {
            return parseFunctionDef();
        }
        // Plain value binding or destructuring (let { ... } = ..., let x = expr, etc.)
        auto mainBlock = std::make_unique<ast::MainBlock>();
        mainBlock->location = currentLocation();
        mainBlock->synthetic = true;
        mainBlock->body.push_back(parseExpr());
        return mainBlock;
    }

    // Top-level type annotation: `name : Type` — must be checked before
    // the generic expression fallback below, since a bare LowerIdent is
    // also a valid expression start (e.g. a bare function call). A
    // LowerIdent immediately followed by `:` is unambiguous: no expression
    // construct starts that way.
    //
    // `:>` (implicit-This signature) is deliberately NOT accepted here —
    // it only makes sense inside `make T do ... end`, where T is known to
    // be the implicit first param's type. At top level there's no such T.
    if (check(TokenType::LowerIdent) && peekNext().type == TokenType::Colon) {
        return parseTypeAnnotation();
    }
    if (check(TokenType::LowerIdent) && peekNext().type == TokenType::TypeAnnotation) {
        error("':>' (implicit-This signature) is only valid inside 'make T do ... end' — "
              "use ':' at top level instead");
    }

    // Top-level expression (e.g. describe blocks in tests, bare function calls)
    if (isAtExprStart()) {
        auto mainBlock = std::make_unique<ast::MainBlock>();
        mainBlock->location = currentLocation();
        mainBlock->body.push_back(parseExpr());
        return mainBlock;
    }

    error("Unexpected token at top level: " + std::string(tokenTypeName(peek().type)));
}

// ===== Module =====

auto Parser::parseModuleDef() -> std::unique_ptr<ast::ModuleDef> {
    auto mod = std::make_unique<ast::ModuleDef>();
    mod->location = currentLocation();

    if (match(TokenType::Foul)) {
        mod->isFoul = true;
    }

    expect(TokenType::Module, "Expected 'module'");
    mod->name = expect(TokenType::UpperIdent, "Expected module name").value;
    expect(TokenType::Do, "Expected 'do' after module name");
    skipNewlines();

    while (!check(TokenType::End) && !atEnd()) {
        if (check(TokenType::Module) ||
            (check(TokenType::Foul) && peekNext().type == TokenType::Module)) {
            mod->body.push_back(parseModuleDef());
        } else if (check(TokenType::Type)) {
            mod->body.push_back(parseTypeDef());
        } else if (check(TokenType::Record)) {
            mod->body.push_back(parseRecordDef());
        } else if (check(TokenType::Trait)) {
            mod->body.push_back(parseTraitDef());
        } else if (check(TokenType::Make)) {
            mod->body.push_back(parseMakeDef());
        } else if (check(TokenType::Compiled)) {
            mod->body.push_back(parseCompiledBlock());
        } else if (check(TokenType::Using)) {
            mod->body.push_back(parseUsingBlock());
        } else if (check(TokenType::Public) || check(TokenType::Private)) {
            mod->body.push_back(parseVisibilityBlock());
        } else if (check(TokenType::Foul)) {
            advance();
            mod->body.push_back(parseFunctionDef(true));
        } else if (check(TokenType::Let)) {
            mod->body.push_back(parseFunctionDef());
        } else if (check(TokenType::LowerIdent)) {
            mod->body.push_back(parseTypeAnnotation());
        } else {
            error("Unexpected token in module body: " + std::string(tokenTypeName(peek().type)));
        }
        skipNewlines();
    }

    expect(TokenType::End, "Expected 'end' to close module");
    return mod;
}

// ===== Type Def =====

auto Parser::parseTypeDef() -> std::unique_ptr<ast::TypeDef> {
    auto def = std::make_unique<ast::TypeDef>();
    def->location = currentLocation();
    expect(TokenType::Type, "Expected 'type'");

    def->name = expect(TokenType::UpperIdent, "Expected type name").value;

    // Type params: <A, B> — only if followed by single-letter uppercase params and >
    // Inheritance: < Parent1, Parent2 — followed by multi-letter names
    if (check(TokenType::LessThan)) {
        // Look ahead: if the next token after < is a single-letter UpperIdent
        // and eventually we find >, it's type params. Otherwise it's inheritance.
        auto savedPos = m_pos;
        advance(); // consume <

        bool isTypeParams = false;
        if (check(TokenType::UpperIdent) && peek().value.size() == 1) {
            // Likely type params
            isTypeParams = true;
        }

        m_pos = savedPos; // restore

        if (isTypeParams) {
            advance(); // <
            do {
                def->typeParams.push_back(
                    expect(TokenType::UpperIdent, "Expected type parameter").value);
            } while (match(TokenType::Comma));
            expect(TokenType::GreaterThan, "Expected '>' after type parameters");

            // Could still have inheritance after type params
            if (match(TokenType::LessThan)) {
                do {
                    def->parents.push_back(parseTypeName());
                } while (match(TokenType::Comma));
            }
        } else {
            // Inheritance
            advance(); // <
            do {
                def->parents.push_back(parseTypeName());
            } while (match(TokenType::Comma));
        }
    }

    skipNewlines();

    // Sum type: = Variant1(A) | Variant2 | Variant3(B, C)
    if (match(TokenType::Equals)) {
        def->variants = std::vector<ast::TypeExprPtr>{};
        auto parseVariant = [this]() -> ast::TypeExprPtr {
            auto variant = std::make_unique<ast::TypeExpr>();
            variant->location = currentLocation();

            if (check(TokenType::UpperIdent)) {
                auto name = parseTypeName();
                // Constructor with args: Variant(Type1, Type2)
                if (match(TokenType::LParen)) {
                    std::vector<ast::TypeExprPtr> args;
                    if (!check(TokenType::RParen)) {
                        args.push_back(parseTypeExpr());
                        while (match(TokenType::Comma)) {
                            args.push_back(parseTypeExpr());
                        }
                    }
                    expect(TokenType::RParen, "Expected ')' after variant args");
                    variant->kind = ast::GenericType{std::move(name), std::move(args)};
                } else if (match(TokenType::LessThan)) {
                    std::vector<ast::TypeExprPtr> args;
                    args.push_back(parseTypeExpr());
                    while (match(TokenType::Comma)) {
                        args.push_back(parseTypeExpr());
                    }
                    expect(TokenType::GreaterThan, "Expected '>'");
                    variant->kind = ast::GenericType{std::move(name), std::move(args)};
                } else {
                    variant->kind = std::move(name);
                }

                // Optional suffix: Name?
                if (match(TokenType::Question)) {
                    auto opt = std::make_unique<ast::TypeExpr>();
                    opt->location = currentLocation();
                    opt->kind = ast::OptionalType{std::move(variant)};
                    variant = std::move(opt);
                }

                // Check for function type: Name -> Type (type alias)
                if (check(TokenType::Arrow)) {
                    advance(); // ->
                    auto right = parseTypeFunction();
                    auto funcType = std::make_unique<ast::TypeExpr>();
                    funcType->location = currentLocation();
                    funcType->kind = ast::FunctionType{std::move(variant), std::move(right)};
                    return funcType;
                }
            } else if (check(TokenType::Atom)) {
                variant->kind = ast::AtomType{advance().value};
            } else if (check(TokenType::LParen)) {
                // Tuple type or grouped: (A, B) or (A -> B)
                variant = parseTypePrimary();
                if (check(TokenType::Arrow)) {
                    advance();
                    auto right = parseTypeFunction();
                    auto funcType = std::make_unique<ast::TypeExpr>();
                    funcType->location = currentLocation();
                    funcType->kind = ast::FunctionType{std::move(variant), std::move(right)};
                    return funcType;
                }
            } else {
                variant = parseTypeExpr();
            }
            return variant;
        };

        // Parse using variant parser that handles constructors with args
        // First variant, then check for | (with newline support)
        def->variants->push_back(parseVariant());
        skipNewlines();
        while (match(TokenType::Pipe)) {
            skipNewlines();
            def->variants->push_back(parseVariant());
            skipNewlines();
        }

        // If only one variant and it's a function/complex type, it's a type alias
        // Reparse as full type expr if no pipes were found
        if (def->variants->size() == 1) {
            // Check if next meaningful token after the type is -> (function type)
            // Already handled since parseVariant falls through to parseTypeExpr for non-constructors
        }
    }
    // Abstract type with required functions and/or static block
    else if (match(TokenType::Do)) {
        skipNewlines();
        def->abstractFunctions = std::vector<ast::AbstractFunction>{};
        while (!check(TokenType::End) && !atEnd()) {
            // Static block inside type
            if (check(TokenType::Static)) {
                advance();
                expect(TokenType::Do, "Expected 'do' after 'static'");
                skipNewlines();
                def->staticBlock = ast::StaticBlock{};
                while (!check(TokenType::End) && !atEnd()) {
                    if (check(TokenType::Let) || check(TokenType::Foul)) {
                        bool isFoul = match(TokenType::Foul);
                        def->staticBlock->functions.push_back(parseFunctionDef(isFoul));
                    } else {
                        error("Expected function definition in static block");
                    }
                    skipNewlines();
                }
                expect(TokenType::End, "Expected 'end' to close static block");
                skipNewlines();
                continue;
            }

            ast::AbstractFunction func;
            func.name = expect(TokenType::LowerIdent, "Expected function name").value;
            if (match(TokenType::TypeAnnotation)) {
                func.implicitThis = true;
            } else {
                expect(TokenType::Colon, "Expected ':' or ':>' after function name");
                func.implicitThis = false;
            }
            func.type = parseTypeExpr();
            def->abstractFunctions->push_back(std::move(func));
            skipNewlines();
        }
        expect(TokenType::End, "Expected 'end' to close type");
    }

    return def;
}

// ===== Record =====

auto Parser::parseRecordDef() -> std::unique_ptr<ast::RecordDef> {
    auto def = std::make_unique<ast::RecordDef>();
    def->location = currentLocation();
    expect(TokenType::Record, "Expected 'record'");

    def->name = expect(TokenType::UpperIdent, "Expected record name").value;

    if (match(TokenType::LessThan)) {
        do {
            def->typeParams.push_back(
                expect(TokenType::UpperIdent, "Expected type parameter").value);
        } while (match(TokenType::Comma));
        expect(TokenType::GreaterThan, "Expected '>' after type parameters");
    }

    expect(TokenType::Do, "Expected 'do' after record name");
    skipNewlines();

    while (!atEnd()) {
        // End of record — 'end' not followed by ':' means it's the closing keyword
        if (check(TokenType::End) && peekNext().type != TokenType::Colon) break;

        // Static block
        if (check(TokenType::Static)) {
            advance(); // static
            expect(TokenType::Do, "Expected 'do' after 'static'");
            skipNewlines();
            def->staticBlock = ast::StaticBlock{};
            while (!check(TokenType::End) && !atEnd()) {
                if (check(TokenType::Let) || check(TokenType::Foul)) {
                    bool isFoul = match(TokenType::Foul);
                    def->staticBlock->functions.push_back(parseFunctionDef(isFoul));
                } else {
                    error("Expected function definition in static block");
                }
                skipNewlines();
            }
            expect(TokenType::End, "Expected 'end' to close static block");
            skipNewlines();
            continue;
        }

        ast::RecordField field;
        // Field names can be keywords (e.g. 'end', 'type')
        if (check(TokenType::LowerIdent) || check(TokenType::End) ||
            check(TokenType::Type) || check(TokenType::Match) ||
            check(TokenType::Loop)) {
            field.name = advance().value;
        } else {
            error("Expected field name");
        }
        expect(TokenType::Colon, "Expected ':' after field name");
        field.type = parseTypeExpr();
        if (match(TokenType::Equals)) {
            field.defaultValue = parseExpr();
        }
        def->fields.push_back(std::move(field));
        skipNewlines();
    }

    expect(TokenType::End, "Expected 'end' to close record");
    return def;
}

// ===== Make =====

auto Parser::parseTraitDef() -> std::unique_ptr<ast::TraitDef> {
    auto def = std::make_unique<ast::TraitDef>();
    def->location = currentLocation();
    expect(TokenType::Trait, "Expected 'trait'");
    {
        auto tok = expect(TokenType::UpperIdent, "Expected trait name");
        if (tok.value.size() == 1)
            error("Trait name '" + tok.value + "' is a single uppercase letter — those are reserved for type parameters");
        def->name = tok.value;
    }
    // Optional type params: `trait Functor<F> do ...`
    if (match(TokenType::LessThan)) {
        while (!check(TokenType::GreaterThan) && !atEnd()) {
            def->typeParams.push_back(
                expect(TokenType::UpperIdent, "Expected type param").value);
            if (!check(TokenType::GreaterThan)) expect(TokenType::Comma, "Expected ','");
        }
        expect(TokenType::GreaterThan, "Expected '>'");
    }
    expect(TokenType::Do, "Expected 'do' after trait name");
    skipNewlines();

    while (!check(TokenType::End) && !atEnd()) {
        if (check(TokenType::Foul) &&
            peekNext().type == TokenType::LowerIdent) {
            // Peek ahead: `foul name :` → foul required method sig
            //             `foul name(` or `foul name do` → foul default impl
            size_t saved = m_pos;
            advance(); // consume foul
            bool isAnnotation = peekNext().type == TokenType::Colon ||
                                peekNext().type == TokenType::TypeAnnotation;
            m_pos = saved;
            if (isAnnotation) {
                advance(); // consume foul
                auto ann = parseTypeAnnotation();
                ann->isFoul = true;
                def->body.push_back(std::move(ann));
            } else {
                advance(); // consume foul
                def->body.push_back(parseFunctionDef(true));
            }
        } else if (check(TokenType::Let)) {
            def->body.push_back(parseFunctionDef(false));
        } else if (check(TokenType::LowerIdent)) {
            // Required method signature: `methodName : type`
            def->body.push_back(parseTypeAnnotation());
        } else {
            error("Unexpected token in trait body");
        }
        skipNewlines();
    }

    expect(TokenType::End, "Expected 'end' to close trait");
    return def;
}

auto Parser::parseMakeDef() -> std::unique_ptr<ast::MakeDef> {
    auto def = std::make_unique<ast::MakeDef>();
    def->location = currentLocation();
    expect(TokenType::Make, "Expected 'make'");

    if (match(TokenType::Final)) {
        expect(TokenType::Colon, "Expected ':' after 'final'");
        def->isFinal = true;
    }

    def->target = parseTypeExpr();

    // Optional `, implement: Trait1, Trait2` clause
    // Syntax: `make Something, implement: Showable, Comparable do`
    if (check(TokenType::Comma) && peekNext().type == TokenType::LowerIdent) {
        auto savedPos = m_pos;
        advance(); // ","
        if (check(TokenType::LowerIdent) && peek().value == "implement" &&
            peekNext().type == TokenType::Colon) {
            advance(); // "implement"
            advance(); // ":"
            {
                auto tok = expect(TokenType::UpperIdent, "Expected trait name");
                if (tok.value.size() == 1)
                    error("Trait name '" + tok.value + "' is a single uppercase letter — those are reserved for type parameters");
                def->implements.push_back(tok.value);
            }
            while (check(TokenType::Comma) && peekNext().type == TokenType::UpperIdent) {
                advance(); // ","
                auto tok = expect(TokenType::UpperIdent, "Expected trait name");
                if (tok.value.size() == 1)
                    error("Trait name '" + tok.value + "' is a single uppercase letter — those are reserved for type parameters");
                def->implements.push_back(tok.value);
            }
        } else {
            m_pos = savedPos; // not an implement clause, backtrack
        }
    }

    expect(TokenType::Do, "Expected 'do' after make target");
    skipNewlines();

    while (!check(TokenType::End) && !atEnd()) {
        if (check(TokenType::Public) || check(TokenType::Private)) {
            def->body.push_back(parseVisibilityBlock());
        } else if (check(TokenType::Foul)) {
            advance();
            def->body.push_back(parseFunctionDef(true));
        } else if (check(TokenType::Let)) {
            def->body.push_back(parseFunctionDef());
        } else if (check(TokenType::LowerIdent)) {
            def->body.push_back(parseTypeAnnotation());
        } else {
            error("Unexpected token in make body: " + std::string(tokenTypeName(peek().type)));
        }
        skipNewlines();
    }

    expect(TokenType::End, "Expected 'end' to close make");
    return def;
}

// ===== Functions =====

auto Parser::parseFunctionDef(bool isFoul) -> std::unique_ptr<ast::FunctionDef> {
    auto def = std::make_unique<ast::FunctionDef>();
    def->location = currentLocation();
    def->isFoul = isFoul;

    if (!isFoul) {
        expect(TokenType::Let, "Expected 'let'");
    }

    // Function name can be a lower ident, upper ident (static constructors),
    // keyword-as-name, splice ident, or operator
    if (check(TokenType::LowerIdent) || check(TokenType::UpperIdent) ||
        check(TokenType::Loop) ||
        check(TokenType::Match) || check(TokenType::SpliceIdent)) {
        def->name = advance().value;
    } else if (check(TokenType::Plus) || check(TokenType::Minus) ||
               check(TokenType::Star) || check(TokenType::Slash) ||
               check(TokenType::Percent) || check(TokenType::EqEq) ||
               check(TokenType::NotEq) || check(TokenType::LessThan) ||
               check(TokenType::GreaterThan) || check(TokenType::LessEq) ||
               check(TokenType::GreaterEq)) {
        def->name = std::string(tokenTypeName(advance().type));
    } else {
        error("Expected function name");
    }

    if (match(TokenType::Question)) {
        def->isPredicate = true;
    }

    // Check if function name ends with ?
    if (!def->isPredicate && !def->name.empty() && def->name.back() == '?') {
        def->isPredicate = true;
    }

    def->clauses.push_back(parseFunctionClause());
    return def;
}

auto Parser::parseFunctionClause() -> ast::FunctionClause {
    ast::FunctionClause clause;

    // Parameters
    if (match(TokenType::LParen)) {
        if (!check(TokenType::RParen)) {
            clause.params = parseParams();
        }
        expect(TokenType::RParen, "Expected ')' after parameters");
    }

    // Return type annotation: -> Type
    if (match(TokenType::Arrow)) {
        parseTypeExpr(); // consume return type (stored later when we need it)
    }

    // = expr (single expression body)
    if (match(TokenType::Equals)) {
        clause.body.push_back(parseExpr());
    }
    // do...end block body
    else if (match(TokenType::Do)) {
        skipNewlines();
        while (!check(TokenType::End) && !atEnd()) {
            clause.body.push_back(parseExpr());
            skipNewlines();
        }

        expect(TokenType::End, "Expected 'end' to close function");
    }

    return clause;
}

auto Parser::parseParams() -> std::vector<ast::Param> {
    std::vector<ast::Param> params;
    params.push_back(parseParam());
    while (match(TokenType::Comma)) {
        params.push_back(parseParam());
    }
    return params;
}

auto Parser::parseParam() -> ast::Param {
    ast::Param param;

    // Try pattern first for complex matches
    if (check(TokenType::At) || check(TokenType::LBrace) || check(TokenType::LBracket)) {
        param.pattern = parsePattern();
        return param;
    }
